--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -71,7 +71,7 @@
 				</div>
 
 				<div class="row" id="ld-milieu-2">
-					<div class='content'><%= h Rinku.auto_link(@challenge.context).gsub(/\n/, '<br/>').html_safe%></div>
+					<div class='content'><%= h Rinku.auto_link(@challenge.context, :all, 'target="_blank"').gsub(/\n/, '<br/>').html_safe%></div>
 				</div>
 				
 				<% unless @challenge.not_full?%>
@@ -259,7 +259,7 @@
 		<div class="row">
 			<div class "row" id="to-be-closed">
 				<div id="effective-context">
-					<div class="text"><%= h Rinku.auto_link(@challenge.content).gsub(/\n/, '<br/>').html_safe%>
+					<div class="text"><%= h Rinku.auto_link(@challenge.content, :all, 'target="_blank"').gsub(/\n/, '<br/>').html_safe%>
 					</div>
 				</div>
 			</div>
