--- a/app/views/shared/_micropost.html.erb
+++ b/app/views/shared/_micropost.html.erb
@@ -24,7 +24,7 @@
 				</div>
 				<div class="row">
 					<div class="span4" id="content">
-						<%= h Rinku.auto_link(micropost.content).gsub(/\n/, '<br/>').html_safe  %>
+						<%= h Rinku.auto_link(micropost.content, :all, 'target="_blank"').gsub(/\n/, '<br/>').html_safe  %>
 						</br>
 					</div>
 				</div>
