--- a/app/views/shared/_comment_badge.html.erb
+++ b/app/views/shared/_comment_badge.html.erb
@@ -11,7 +11,7 @@
 			</div>
 			<div class="span4" id="droite-comment">
 				<div class="row" id="content">
-					<%= h Rinku.auto_link(comment.content).gsub(/\n/, '<br/>').html_safe  %>
+					<%= h Rinku.auto_link(comment.content, :all, 'target="_blank"').gsub(/\n/, '<br/>').html_safe  %>
 				</div>
 			</div>
 		</div>
