--- a/app/views/arguments/show.html.erb
+++ b/app/views/arguments/show.html.erb
@@ -1,2 +1,9 @@
 
-<%= render "shared/argument_pour_badge", :argument => @argument %>
+<div class="container">
+	<div class="span9 offset3">
+		</br>
+		</br>
+		<h3>Votre commentaire doit faire moins de 140 caractères</h3>
+		<%= render "shared/argument_badge", :argument => @argument %>
+	</div>
+</div>
