--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
     <![endif]-->
 	<%= render 'shared/analytics' %>
 	<link href='simpletextrotator.css' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
@@ -89,7 +90,7 @@
 				</div>
 				<div class ="row", id="debat-nav">
 					<div id="apprendre">
-			        	  <%= link_to "Devenir un Mouton", abonnements_path, class: "apprendre" %>
+			        	  <%= link_to "Le troupeau se réunit", events_path, class: "apprendre" %>
 					</div>
 				</div>
 				<div class ="row" id="search">
