--- a/app/views/challenges/_four_corner.html.erb
+++ b/app/views/challenges/_four_corner.html.erb
@@ -439,7 +439,7 @@
 							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 1 %>
 						<% else %>
-						<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+						<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 											<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 						<% end %>
@@ -459,7 +459,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 2 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 								<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 						<% end %>
@@ -479,7 +479,7 @@
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 3 %>
 						<% else %>
 
-							<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc1_badge", argument: @challenge.third_argument %>
 						<% end %>
@@ -498,7 +498,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 4 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc2_badge", argument: @challenge.fourth_argument %>
 						<% end %>
@@ -516,7 +516,7 @@
 							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 5 %>
 						<% else %>
-						<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+						<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 											<%= render "shared/argument_badge", argument: @challenge.fifth_argument %>
 						<% end %>
@@ -536,7 +536,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 6 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 								<%= render "shared/argument_contre_badge", argument: @challenge.sixth_argument %>
 						<% end %>
@@ -556,7 +556,7 @@
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 7 %>
 						<% else %>
 
-							<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc1_badge", argument: @challenge.seventh_argument %>
 						<% end %>
@@ -575,7 +575,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 8 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 					              finish_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc2_badge", argument: @challenge.eighth_argument %>
 						<% end %>
