--- a/app/views/tour_mailer/votre_tour.html.erb
+++ b/app/views/tour_mailer/votre_tour.html.erb
@@ -59,7 +59,7 @@
 				<table id="content-1" cellpadding="20" cellspacing="0" align="center">
 					<tr>
 						<td width="560" valign="top" colspan="3" bgcolor="ffffff">
-							<h4><a href='www.moutoners.com'><%= link_to "C'est à vous d'argumenter dans le débat ##{@challenge.title}", challenge_url(@challenge)%>.</a></h4>
+							<h4><a href='www.moutoners.com'><%= link_to "C'est à vous d'argumenter dans le débat '#{@challenge.title}'", challenge_url(@challenge)%>.</a></h4>
 						</td>
 					</tr>
 				</table><!-- content 1 -->
