--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -296,7 +296,7 @@
 				<% else%>
 				
 				<%end%>
-			<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["second","third","forth","fifth","sixth","seventh","eighth","over", "judged", "judged_one", "homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 			<% end %>
 		</div>		
@@ -315,7 +315,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["third","forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one", "homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 			<% end %>	
 		</div>
@@ -334,7 +334,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["forth","fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one", "homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.third_argument %>
 			<% end %>	
 		</div>
@@ -353,7 +353,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["fifth","sixth","seventh","eighth" ,"over", "judged", "judged_one", "homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_contre_badge", argument: @challenge.fourth_argument %>
 			<% end %>	
 		</div>
@@ -372,7 +372,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["sixth","seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["sixth","seventh","eighth" ,"over", "judged", "judged_one", "homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_badge", argument: @challenge.fifth_argument %>
 			<% end %>	
 		</div>
@@ -390,7 +390,7 @@
 					<% end %>
 				<% else%>
 				<%end%>
-			<% elsif ["seventh","eighth" ,"over", "judged", "judged_one"].include?(@challenge.state) %>
+			<% elsif ["seventh","eighth" ,"over", "judged", "judged_one", "homepage"].include?(@challenge.state) %>
 				<%= render "shared/argument_contre_badge", argument: @challenge.sixth_argument %>
 			<% end %>	
 		</div>		
