--- a/app/views/static_pages/list_debates.html.erb
+++ b/app/views/static_pages/list_debates.html.erb
@@ -51,7 +51,7 @@
 							<%= image_tag("image8-explcha-01.png")%>
 						</div>
 						<div class="row" id="sign_4">
-							<span class="texte">Tu peux comenter, apprécier ou déprécier les arguments des autres. Les arguments populaires seront mis en avant.</span>
+							<span class="texte">Tu peux commenter, apprécier ou déprécier les arguments des autres. Les arguments populaires seront mis en avant.</span>
 						</div>
 					</div>
 				</div>
